@@ -46,6 +46,7 @@ The following bugs are resolved with this release:
   [29657] libc: Incorrect struct stat for 64-bit time on linux/generic
     platforms
   [29730] broken y2038 support in fstatat on MIPS N64
+  [29771] Restore IPC_64 support in sysvipc *ctl functions
 
 Version 2.36
 
